Added simple_cap, documented, checked

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,13 @@
 Package: speedytax
-Title: What the Package Does (One Line, Title Case)
+Title: speedytax
 Version: 0.0.0.9000
 Authors@R: 
     person("John", "Quensen", , "quensenj@msu.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7669-1595"))
-Description: What the package does (one paragraph).
-License: `use_mit_license()`
+Description: Import classification reuslts from the RDP Classifier, sintax clasifier and the QIIME2 classifiers into a phyloseq tax_table object.
+License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
+Imports: 
+    phyloseq
