--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,4 +2,6 @@
 
 export(import_qiime2_taxonomy)
 export(import_rdp_tax_table)
+export(import_sintax_file)
+export(import_sintax_file_mod)
 export(simple_cap)
