--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,4 +4,5 @@ export(import_qiime2_taxonomy)
 export(import_rdp_tax_table)
 export(import_sintax_file)
 export(import_sintax_file_mod)
+export(import_sintax_file_sorted)
 export(simple_cap)
