--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,13 @@ export(import_qiime2_taxonomy)
 export(import_rdp_tax_table)
 export(import_rescript_taxonomy)
 export(import_sintax_file)
-export(import_sintax_file_mod)
 export(import_sintax_file_sorted)
 export(simple_cap)
+importFrom(dplyr,mutate)
+importFrom(dplyr,pull)
+importFrom(dplyr,rename)
+importFrom(dplyr,select)
+importFrom(phyloseq,tax_table)
+importFrom(stringr,str_starts)
+importFrom(tibble,as_tibble)
+importFrom(tidyr,separate)
