Added importFrom stringr, str_replace_all and importFrom utils read.table to functins so that these would be ncluded inthe NAMESPACE file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,8 @@ importFrom(dplyr,pull)
 importFrom(dplyr,rename)
 importFrom(dplyr,select)
 importFrom(phyloseq,tax_table)
+importFrom(stringr,str_replace_all)
 importFrom(stringr,str_starts)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,separate)
+importFrom(utils,read.table)
