Add cpp version of rdp importer function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,8 +2,12 @@
 
 export(import_qiime2_taxonomy)
 export(import_rdp_tax_table)
+export(import_rdp_tax_table_cpp)
 export(import_sintax_file)
 export(simple_cap)
+import(Rcpp)
+importFrom(Rcpp,evalCpp)
+importFrom(Rcpp,sourceCpp)
 importFrom(dplyr,mutate)
 importFrom(dplyr,pull)
 importFrom(dplyr,rename)
@@ -14,3 +18,4 @@ importFrom(stringr,str_starts)
 importFrom(tibble,as_tibble)
 importFrom(tidyr,separate)
 importFrom(utils,read.table)
+useDynLib(speedytax, .registration = TRUE)
