--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,9 +10,12 @@ License: MIT + file LICENSE
 Imports: 
     dplyr,
     phyloseq,
+    Rcpp,
     stringr,
     tibble,
     tidyr
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.1
+LinkingTo: 
+    Rcpp
