--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(import_qiime2_taxonomy)
 export(import_rdp_tax_table)
 export(import_rdp_tax_table_cpp)
 export(import_sintax_file)
+export(import_sintax_file_cpp)
 export(simple_cap)
 import(Rcpp)
 importFrom(Rcpp,evalCpp)
