Made function and file names consistent

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,8 @@ export(import_qiime2_tax_table)
 export(import_qiime2_tax_table_cpp)
 export(import_rdp_tax_table)
 export(import_rdp_tax_table_cpp)
-export(import_sintax_file)
-export(import_sintax_file_cpp)
+export(import_sintax_tax_table)
+export(import_sintax_tax_table_cpp)
 export(simple_cap)
 import(Rcpp)
 importFrom(Rcpp,evalCpp)
