Export helper function to read example taxonomy files.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,7 @@ export(import_rdp_tax_table)
 export(import_rdp_tax_table_cpp)
 export(import_sintax_tax_table)
 export(import_sintax_tax_table_cpp)
+export(read_tax_example)
 export(simple_cap)
 import(Rcpp)
 importFrom(Rcpp,evalCpp)
