--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,8 @@ Version: 0.0.0.9000
 Authors@R: 
     person("John", "Quensen", , "quensenj@msu.edu", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7669-1595"))
-Description: Import classification reuslts from the RDP Classifier, sintax
-    clasifier and the QIIME2 classifiers into a phyloseq tax_table object.
+Description: Import classification results from the RDP Classifier, sintax
+    classifier and the QIIME2 classifiers into a phyloseq tax_table object.
 License: MIT + file LICENSE
 Imports: 
     dplyr,
