Added USEARCH sintax to the types of classification tables that can be imported

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,8 +4,7 @@ Version: 1.0.3
 Authors@R: 
     person("John", "Quensen", email = "quensenj@msu.edu", role = c("aut", "cre", "cph"),
            comment = c(ORCID = "0000-0002-7669-1595"))
-Description: Import classification results from the 'RDP Classifier,' 'vsearch sintax'
-    and the 'QIIME2' classifiers into 'phyloseq' tax_table objects.
+Description: Import classification results from the 'RDP Classifier,' 'USEARCH sintax,' 'vsearch sintax' and the 'QIIME2' classifiers into 'phyloseq' tax_table objects.
 License: MIT + file LICENSE
 Imports: 
     dplyr,
